--- a/package.json
+++ b/package.json
@@ -8,7 +8,13 @@
     "@testing-library/user-event": "^7.1.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "@material-ui/core": "^4.7.0",
+    "bootstrap": "~4.4.1",
+    "react-content-loader": "^4.3.3",
+    "react-router-dom": "^5.1.2",
+    "react-basic-table": "^1.0.16",
+    "react-bootstrap": "^1.0.0-beta.16"
   },
   "scripts": {
     "start": "react-scripts start",
